Added some icons Fixed closing of files Confirmation dialog in main frame (yes/no/cancel) Downloading now shows indicator in status/progress bar Normalized download method in gdb object

--- a/todo.txt
+++ b/todo.txt
@@ -4,6 +4,8 @@ GENERAL
  * GDB Wrapper that caches things like breakpoints, etc
  * Line number+function in status bar while running
  * Move to blocking GDB model with spinoff thread for commands (Rather than call-callback method)
+ * Syntax colorization for Makefiles and header files
+ 
 LOGGER
  * right click menu for log tabs:
    - clear log
@@ -49,6 +51,7 @@ PROJECT VIEW
  * right click menus
  *    Project - Project options, save, save as
  *    Files - Open, Delete, etc...
+ *    Folders - open in explorer
  * DnD
  * Currently open files tree
  
