Added a windows installer and build scripts Refactored session support to prepare for persistent windows/dialogs/aui perspectives Refactored the variable view to use the more powerful gdb variable system Variables are now editable Variables are now a tree  (with structs expandable, et al) Project closure works Exit event correctly detaches from GDB Process Improved GDB object models variables and breakpoints Fixed some of the newline issues in logging GDB Console has an input line now, which can accept GDB commands directly Removed the no-longer-necessary GDB Command menu entry (because of see above) Added psyco support Program sets path correctly Added post-attach and pre-detach commands to the project (though they're not executed I guess?) Added an execution position Style Added disabled breakpoint markers Directory expansion works in the project view now (with double click)

--- a/todo.txt
+++ b/todo.txt
@@ -56,6 +56,8 @@ EDITOR VIEW
  * Check disk periodically for updated files and reload
  * Hilighting of current line
  * Tooltips for file tabs
+ * Apply styles to open files
+ * Clearing breakpoints is broken
  
 PROJECT VIEW
  * right click menus
