Changed the overall frame style to !wx.TAB_TRAVERSAL, eliminating the runtime view ENTER bug! Deleted an overshadowed method in the editor view More explicit about RuntimeTree call to superclass constructors Minor formatting fixes

--- a/todo.txt
+++ b/todo.txt
@@ -10,6 +10,8 @@ GENERAL
  * Handle col numbers in build errors
  * Fix background colors
  * SFR VIEW!!!
+ * Add SVN number of the build to the status bar/about box?
+ 
  
 LOGGER
  * right click menu for log tabs:
