Added bitfield support for CPU registers Added maximization of the current editor pane (with memory of perspective) Better GDB error handling More conservative with GDB event firing Tooltips for bitfield cells More verbose GDB event firing (temporary) Assembly view clears properly when GDB disconnects Better context menu support in build/log views Fixed build view links Hilighting of error lines when clicked as links Better support of CPU regs in the runtime view Better clearing of runtime view on unexpected disconnect Better handling of unexpected disconnect across the board Pre-download command added Added more peripheral support in STM32F103 xml file

--- a/todo.txt
+++ b/todo.txt
@@ -1,15 +1,9 @@
 GENERAL
- * GDB Wrapper that caches things like breakpoints, etc
  * Move to blocking GDB model with spinoff thread for commands (Rather than call-callback method)
- * Syntax colorization for Makefiles
  * Printing support
  * More obvious "halted in the weeds" notification
- * Proper killing of GDB process (no dangling connections)
  * Break on main
- * Jump to entry point after download
  * Handle col numbers in build errors
- * Fix background colors
- * SFR VIEW!!!
  * Add SVN number of the build to the status bar/about box?
  
  
@@ -17,7 +11,6 @@ LOGGER
  * right click menu for log tabs:
    - clear log
    - save log
- * fix newlines in log output
 
 GENERIC VIEW
  * Better way of handling AUIInfo
@@ -34,7 +27,7 @@ EDITOR VIEW
    - Save page/Save page as...
  * Check disk periodically for updated files and reload
  * Tooltips for file tabs
- 
+ *  
 PROJECT VIEW
  * right click menus
  *    Project - Project options, save, save as
@@ -46,7 +39,7 @@ PROJECT VIEW
  * Currently open files group
  * Star for modified project
  * Periodic refresh of file view
- 
+ * Create new file doesn't
 MAIN FRAME
  * Confirmation/error dialog (for program errors)
  
